2006-04-05  Simon Zheng  <simon.zheng@sun.com>

	Fixes bug #333704
	* gui/dialogs/comp-editor-util.c: (comp_editor_strip_categories):
	Because the passing text is in UTF-8 encoding, it should be traversed
	by utf-8 char order rather than one by one byte.

2006-04-04  Irene Huang <Irene.Huang@sun.com>

       	Fixes bug 335214

	* gui/e-cal-model.c: (e_cal_view_objects_added_cb):
        Call e_table_model_pre_change (E_TABLE_MODEL (model)); before
       	deleting row.

2006-04-03  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #158107
	* gui/dialogs/delete-comp.c: (delete_component_dialog),
	(cb_toggled_cb), (prompt_retract_dialog):
	* gui/dialogs/delete-comp.h:
	* gui/e-calendar-table.c: (add_retract_data), (check_for_retract),
	(e_calendar_table_delete_selected):
	* gui/e-calendar-view.c: (add_retract_data), (check_for_retract),
	(delete_event), (e_calendar_view_delete_selected_occurrence): Added
	retract support.

2006-03-29  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #160357 [b.n.c]
	* gui/e-meeting-store.c: 
	(ems_init): Initialize the num queries.
	(freebusy_async): maintain the num queries count.
	(refresh_busy_periods): Set the store to FreeBusy data.
	* gui/e-meeting-store.[ch]: 
	(e_meeting_store_get_num_queries): Get the number of freebusy
	queries currently going on.
	* gui/e-meeting-time-sel-item.c:
	(e_meeting_time_selector_item_init): Added a busy cursor.
	(e_meeting_time_selector_item_destroy):
	* gui/e-meeting-time-sel-item.h: Added a busy cursor and a function
	to reset the normal cursor.
	* gui/e-meeting-time-sel.c: 
	* gui/e-meeting-time-sel.h:
	(e_meeting_time_selector_construct): Get the main and top canvas items.
	(e_meeting_time_selector_refresh_cb): Set the normal cursor checking the number
	of FreeBusy queries.
	(e_meeting_time_selector_refresh_free_busy):Set the Busy cursor.

2006-03-28  Jeff Cai  <jeff.cai@sun.com> 
	
	Fixes #333877
	* gui/e-meeting-list-view.c: (row_activated_cb):