@@ -1,3 +1,9 @@
+2006-04-06  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	Fixes #162005
+	* gui/comp-util.c: (cal_comp_is_on_server): Pass the recurrence
+	id to find if the object is on the server.
+
 2006-04-05  Simon Zheng  <simon.zheng@sun.com>
 
 	Fixes bug #333704
@@ -12837,3 +12843,4 @@
 
 	* gui/e-tasks.c (e_tasks_delete_completed): no need to do the
 	expunge asyn
+
